<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Яндекс.Переводчик</string>
    <string name="requiredNet">Это приложение требует наличия подключения интернет</string>
    <string name="cancel">Отмена</string>
    <string name="delete_all">Удалить все элементы</string>
    <string name="delete_all_beside_favs">Удалить всё, кроме избранного</string>
    <string name="delete_title">Удаление элементов</string>
    <string name="favorites_title">ИЗБРАННОЕ</string>
    <string name="history_title">ИСТОРИЯ</string>
    <string name="yes">Да</string>
    <string name="you_sure_delete_element">Вы уверены, что хотите удалить элемент</string>

    <string name="transl_license">Переведено сервисом <a href="http://translate.yandex.ru/">"Яндекс.Переводчик"</a></string>
    <string name="dict_license">Реализовано с помощью сервиса <a href="http://api.yandex.ru/dictionary/">"API Яндекс.Словарь"</a></string>
</resources>