...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:singleLine="true"
        app:layout_constraintRight_toRightOf="parent"
...
